myservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - image: cocoveutungateau/myservice_1:1
          imagePullPolicy: Always
          name: myservice
          ports:
            - containerPort: 8080
      restartPolicy: Always
