istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myservice-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "myservice.info"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myservice-vs
  namespace: default
spec:
  hosts:
    - "myservice.info"
  gateways:
    - myservice-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: myactualservice
            port:
              number: 80
